trouble shooting list button overflow issue

--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -6,7 +6,7 @@
 }
 
 .list-instructions p {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 /* ============ 
@@ -15,10 +15,17 @@
 .book-card-wrapper {
   background: white;
   margin-right: 0.5rem;
-  min-width: 6rem;
-  width: 6rem;
+  /* width: 6rem; */
+  /* width: 8rem; */
+  width: auto;
+  min-width: 8rem;
   border: 1px solid rgb(210, 210, 210);
   /* margin-bottom: 1rem; */
+}
+
+.book-card-header {
+  width: 100%;
+  text-align: center;
 }
 
 .book-card-content {
@@ -30,7 +37,10 @@
 .book-card img {
   min-height: 100px;
   height: 100px;
-  width: 100%;
+  width: 6rem;
+  max-width: 6rem;
+  margin: auto;
+  /* width: 100%; */
 }
 
 .book-card p {
@@ -158,7 +168,7 @@ button {
 
 .btn-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .btn-bar svg {
